# PyInstallerTutorial

./: .gitignore  MANIFEST.in  README.md  cli.py  pyproject.toml  requirements.txt  setup.py
app/: __main__.py
commands/: build_scripts.sh
src/casd_hub/: __init__.py  __main__.py  config.toml  resources.py  ui.py
src/conf/: config.cfg  constant.py
src/core/: conf_reader.py
tests/: test_resources.py
