[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "casd_hub"
version = "0.1.0"
description = "GUI allows user to connect to a remote server"
readme = "README.md"
authors = [{ name = "Pengfei", email = "liu.pengfei@hotmail.fr" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["casd"]
requires-python = ">=3.9"

dependencies = ["PyQt6" ]

    [project.optional-dependencies]
    build = ["build", "twine"]
    dev = ["black", "bumpver", "isort", "mypy", "pytest"]

    [project.scripts]
    start_hub = "casd_hub.__main__:main"

    [project.urls]
    repository    = "https://github.com/pengfei99/PyInstallerTutorial"
    documentation = "https://github.com/pengfei99/PyInstallerTutorial"

[tool.bumpver]
current_version = "1.1.0"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message  = "bump version {old_version} -> {new_version}"
commit          = true
tag             = true
push            = false

    [tool.bumpver.file_patterns]
    "pyproject.toml" = [
        'current_version = "{version}"',
        'version = "{version}"',
    ]
    "src/casd_hub/__init__.py" = ["{version}"]

[tool.isort]
profile                   = "black"
import_heading_stdlib     = "Standard library imports"
import_heading_thirdparty = "Third party imports"
import_heading_firstparty = "Reader imports"

[tool.mypy]
strict = true

    [[tool.mypy.overrides]]
    module                 = "casd_hub"
    ignore_missing_imports = true